--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -1,6 +1,6 @@
-let answer = parseInt(prompt("Please enter the number you would like to FizzBuzz up to: "));
+const answer = parseInt(prompt("Please enter the number you would like to FizzBuzz up to: "));
 
-
+function FizzBuzz(Fizz, Buzz, FizzBuzz){
 for (let i = 1; i <= answer; i++) {
     if (i % 3 === 0 && i % 5 === 0) {
       console.log("FizzBuzz");
@@ -12,3 +12,6 @@ for (let i = 1; i <= answer; i++) {
       console.log(i);
     }
   }
+  }
+FizzBuzz();
+
