--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>FizzBuzz</title>
 </head>
 <body>
-    <script src="./fizzbuzz.html"></script>
+    <script src="./javaScript.js"></script>
 </body>
 </html>
